--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Rhythm</title>
 </head>
 <body>
-    
+   <div class="wrapper">
+    <div class="header">Header</div>
+    <div class="main">Main</div>
+    <div class="footer">Footer</div>
+   </div>
 </body>
 </html>
