--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 </head>
 <body>
    <div class="wrapper">
-    <div class="header">Header</div>
-    <div class="main">Main</div>
-    <div class="footer">Footer</div>
+    <div class="header">
+        <div class="header__container">
+            <a href="" class="header__logo"><img src="img/logo.svg" alt="Logo"></a>
+            <nav class="header__menu menu">
+               <ul class="menu__list">
+                <li class="menu__item"><a href="" class="menu__link">Store</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Collections</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Support</a></li>
+               </ul> 
+            </nav>
+        </div>
+    </div>
+    <div class="main"></div>
+    <div class="footer"></div>
    </div>
 </body>
 </html>
