--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="wrapper">
-    <div class="header">
+    <header class="header">
         <div class="header__container">
             <a href="" class="header__logo"><img src="img/logo.svg" alt="Logo"></a>
             <nav class="header__menu menu">
@@ -20,9 +20,26 @@
                </ul> 
             </nav>
         </div>
-    </div>
-    <div class="main"></div>
-    <div class="footer"></div>
+    </header>
+    <main class="page">
+        <seaction class="page__main main">
+           <div class="main__conteiner">
+                <div class="main__content">
+                    <h1 class="main__title"></h1>
+                    <p class="main__text"></p>
+                    <div class="main__actions actions-main">
+                        <a href="" class="actions-main__button">Get the App</a>
+                    </div>
+                </div>
+                    <div class="main__decor decor-main">
+                       <div class="decor-main__image">
+                           <img src="img/main/main-decor.png" alt="Main Decor">
+                       </div>
+                    </div>
+               </div>
+        </seaction>
+    </main>
+    <footer class="footer"></footer>
    </div>
 </body>
 </html>
