--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
     </header>
     <main class="page">
         <seaction class="page__main main">
-           <div class="main__conteiner">
+           <div class="main__container">
                 <div class="main__content">
-                    <h1 class="main__title"></h1>
-                    <p class="main__text"></p>
+                    <h1 class="main__title">Browse top quality <span>Guitars</span> online</h1>
+                    <p class="main__text">Explore 50k+ latest collections of branded guitars online with Rhythm.</p>
                     <div class="main__actions actions-main">
-                        <a href="" class="actions-main__button">Get the App</a>
+                        <a href="#" class="actions-main__button">Get the App</a>
+                        <div class="action-main__icon">
+                            <img src="/img/main/google.svg" alt="Gogle Icon">
+                        </div>
+                        <div class="action-main__icon">
+                            <img src="/img/main/apple.svg" alt="Apple Icon">
+                        </div>
                     </div>
                 </div>
                     <div class="main__decor decor-main">
