--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         </div>
                     </div>
                 </div>
-                    <div class="main__decor decor-main">
-                       <div class="decor-main__image">
+                    <div class="main__decor">
+                       <div class="main__image">
                            <img src="img/main/main-decor.png" alt="Main Decor">
                        </div>
                     </div>
