--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <main class="page">
-        <seaction class="page__main main">
+        <section class="page__main main">
            <div class="main__container">
                 <div class="main__content">
                     <h1 class="main__title">Browse top quality <span>Guitars</span> online</h1>
@@ -42,8 +42,30 @@
                            <img src="img/main/main-decor.png" alt="Main Decor">
                        </div>
                     </div>
-               </div>
-        </seaction>
+           </div>
+        </section>
+        <section class="page__store store">
+            <div class="store__container">
+                <h2 class="store__title title">
+                    Check out the <span>Store</span>
+                </h2>
+                <div class="store__body body-store">
+                    <div class="body-store__header">
+                        <div class="body-store__title">NEW ON THE BOARD</div>
+                        <a href="#" class="body-store__all">view all</a>
+                    </div>
+                    <div class="body-store__items">
+                        <div class="body-store__item item">
+                            <a href="" class="item__image">
+                                <img src="/img/store/01.jpg" alt="01">
+                            </a>
+                            <a href="" class="item__titel">The Essential Les Paul</a>
+                            <div class="item__prace">$1,299.00</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer"></footer>
    </div>
