--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2 class="store__title title">
                     Check out the <span>Store</span>
                 </h2>
-                <div class="store__body body-store">
+                <div class="store__body body-store-NEW">
                     <div class="body-store__header">
                         <div class="body-store__title">NEW ON THE BOARD</div>
                         <a href="#" class="body-store__all">view all</a>
@@ -62,7 +62,48 @@
                             <a href="" class="item__titel">The Essential Les Paul</a>
                             <div class="item__prace">$1,299.00</div>
                         </div>
+                        <div class="body-store__item item">
+                            <a href="" class="item__image">
+                                <img src="/img/store/02.jpg" alt="02">
+                            </a>
+                            <a href="" class="item__titel">J-45 Standard</a>
+                            <div class="item__prace">$1,699.00</div>
+                        </div>
+                        <div class="body-store__item item">
+                            <a href="" class="item__image">
+                                <img src="/img/store/03.jpg" alt="03">
+                            </a>
+                            <a href="" class="item__titel">Hummingbird Standard</a>
+                            <div class="item__prace">$2,099.00</div>
+                        </div>
                     </div>
+                 </div>
+                    <div class="body-store__header">
+                        <div class="body-store__title">TOP SELLING</div>
+                        <a href="#" class="body-store__all">view all</a>
+                    </div>
+                    <div class="body-store__items">
+                        <div class="body-store__item item">
+                            <a href="" class="item__image">
+                                <img src="/img/store/04.jpg" alt="04">
+                            </a>
+                            <a href="" class="item__titel">The Essential Les Paul</a>
+                            <div class="item__prace">$1,299.00</div>
+                        </div>
+                        <div class="body-store__item item">
+                            <a href="" class="item__image">
+                                <img src="/img/store/05.jpg" alt="05">
+                            </a>
+                            <a href="" class="item__titel">J-45 Standard</a>
+                            <div class="item__prace">$1,699.00</div>
+                        </div>
+                        <div class="body-store__item item">
+                            <a href="" class="item__image">
+                                <img src="/img/store/06.jpg" alt="06">
+                            </a>
+                            <a href="" class="item__titel">Hummingbird Standard</a>
+                            <div class="item__prace">$2,099.00</div>
+                        </div>
                 </div>
             </div>
         </section>
