--- a/index.html
+++ b/index.html
@@ -138,6 +138,37 @@
                 </div>
             </div>
         </section>
+        <section class="page__brands brands">
+            <div class="brands__container">
+                <h2 class="brands__title title">Featuring the <span>Best Brands</span></h2>
+                <div class="brands__items">
+                    <div class="brands__item">
+                        <img src="/img/brands/01.jpg" alt="Brands">
+                    </div>
+                    <div class="brands__item">
+                        <img src="/img/brands/02.jpg" alt="Brands">
+                    </div>
+                    <div class="brands__item">
+                        <img src="/img/brands/03.jpg" alt="Brands">
+                    </div>
+                    <div class="brands__item">
+                        <img src="/img/brands/04.jpg" alt="Brands">
+                    </div>
+                    <div class="brands__item">
+                        <img src="/img/brands/05.jpg" alt="Brands">
+                    </div>
+                    <div class="brands__item">
+                        <img src="/img/brands/06.jpg" alt="Brands">
+                    </div>
+                    <div class="brands__item">
+                        <img src="/img/brands/07.jpg" alt="Brands">
+                    </div>
+                    <div class="brands__item">
+                        <img src="/img/brands/08.jpg" alt="Brands">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer"></footer>
    </div>
