--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <title>Rhythm</title>
 </head>
 <body>
@@ -197,8 +198,65 @@
                 </div>
             </div>
         </section>
+        <section class="page__reviews reviews">
+            <div class="reviews__container">
+                <h2 class="reviews__title title">What our <span>customer’s</span> say</h2>
+                <div class="reviews__swiper swiper-reviews swiper">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-reviews__wrapper swiper-wrapper">
+                      <!-- Slides -->
+                      <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide">
+                            <div class="slide-swiper-reviews__picture">
+                                <div class="slide-swiper-reviews__imege">                                
+                                    <img src="/img/reviews/01.jpg" alt="Reviews">
+                                </div>
+                            </div>
+                            <div class="slide-swiper-reviews__body">
+                                <div class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</div>
+                                <div class="slide-swiper-reviews__autor">
+                                    <div class="slide-swiper-reviews__name">Ryan Wels</div>
+                                    <div class="slide-swiper-reviews__position">PROFESSIONAL GUITARIST</div>
+                                </div>
+                            </div>
+                      </div>
+                      <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide">
+                        <div class="slide-swiper-reviews__picture">
+                            <div class="slide-swiper-reviews__imege">                                
+                                <img src="/img/reviews/01.jpg" alt="Reviews">
+                            </div>
+                        </div>
+                        <div class="slide-swiper-reviews__body">
+                            <div class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</div>
+                            <div class="slide-swiper-reviews__autor">
+                                <div class="slide-swiper-reviews__name">Ryan Wels</div>
+                                <div class="slide-swiper-reviews__position">PROFESSIONAL GUITARIST</div>
+                            </div>
+                        </div>
+                  </div>
+                  <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide">
+                    <div class="slide-swiper-reviews__picture">
+                        <div class="slide-swiper-reviews__imege">                                
+                            <img src="/img/reviews/01.jpg" alt="Reviews">
+                        </div>
+                    </div>
+                    <div class="slide-swiper-reviews__body">
+                        <div class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</div>
+                        <div class="slide-swiper-reviews__autor">
+                            <div class="slide-swiper-reviews__name">Ryan Wels</div>
+                            <div class="slide-swiper-reviews__position">PROFESSIONAL GUITARIST</div>
+                        </div>
+                    </div>
+              </div>
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>         
+        </section>
     </main>
     <footer class="footer"></footer>
    </div>
+   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+   <script src="/js/script.js"></script>
 </body>
 </html>
