--- a/index.html
+++ b/index.html
@@ -226,14 +226,16 @@
                             </div>
                         </div>
                         <div class="slide-swiper-reviews__body">
-                            <div class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</div>
+                            <div class="slide-swiper-reviews__text">
+                            <p>“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.</p>
+                            <p>”The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.</p></div>
                             <div class="slide-swiper-reviews__autor">
                                 <div class="slide-swiper-reviews__name">Ryan Wels</div>
                                 <div class="slide-swiper-reviews__position">PROFESSIONAL GUITARIST</div>
                             </div>
                         </div>
-                  </div>
-                  <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide">
+                      </div>
+                      <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide">
                     <div class="slide-swiper-reviews__picture">
                         <div class="slide-swiper-reviews__imege">                                
                             <img src="/img/reviews/01.jpg" alt="Reviews">
@@ -246,10 +248,24 @@
                             <div class="slide-swiper-reviews__position">PROFESSIONAL GUITARIST</div>
                         </div>
                     </div>
-              </div>
-                    </div>
+                      </div>
+                      <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide">
+                        <div class="slide-swiper-reviews__picture">
+                            <div class="slide-swiper-reviews__imege">                                
+                                <img src="/img/reviews/01.jpg" alt="Reviews">
+                            </div>
+                        </div>
+                        <div class="slide-swiper-reviews__body">
+                            <div class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</div>
+                            <div class="slide-swiper-reviews__autor">
+                                <div class="slide-swiper-reviews__name">Ryan Wels</div>
+                                <div class="slide-swiper-reviews__position">PROFESSIONAL GUITARIST</div>
+                            </div>
+                        </div>
+                      </div>
+                      </div>
                     <!-- If we need pagination -->
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-reviews__pagination swiper-pagination"></div>
                 </div>
             </div>         
         </section>
