--- a/index.html
+++ b/index.html
@@ -269,6 +269,24 @@
                 </div>
             </div>         
         </section>
+        <section class="page__favorite fevorit">
+            <div class="favorite__container">
+                <div class="favorite__body">
+                    <h2 class="favorite__title title">Browse and buy your <span>favorite guitars</span> with Rhythm.</h2>
+                    <div class="favorite__apps apps-favorite">
+                        <a href="" class="apps-favorite__item">
+                            <img src="/img/favorite/google.jpg" alt="Gogle">
+                        </a>
+                        <a href="" class="apps-favorite__item">
+                            <img src="/img/favorite/apple.jpg" alt="Apple">
+                        </a>
+                    </div>
+                </div>
+                <div class="favorite__images">
+                    <img src="/img/favorite/image.jpg" alt="ImageFavorit">
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer"></footer>
    </div>
